--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ node_js:
 before_install:
 - openssl aes-256-cbc -K $encrypted_9b00f5262c30_key -iv $encrypted_9b00f5262c30_iv
   -in travis_deploy.enc -out travis_deploy -d
+script:
+- echo "Skipping tests"
 deploy:
 - provider: script
   script: bash scripts/deploy.sh staging
