--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,8 @@ before_install:
 - chmod 600 travis_deploy
 script:
 - echo "Skipping tests"
-- ls
-- ls ~
-- ls ~/.ssh/
-- ssh -i travis_deploy -oStrictHostKeyChecking=no $REMOTEUSER@$REMOTEADDRESS 'bash -s' < scripts/staging.sh
 deploy:
-- skip_cleanup: true
-  provider: script
+- provider: script
   script: bash scripts/deploy.sh staging
   on:
     branch: staging
