--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,10 @@ before_install:
 - openssl aes-256-cbc -K $encrypted_9b00f5262c30_key -iv $encrypted_9b00f5262c30_iv
   -in travis_deploy.enc -out travis_deploy -d
 - chmod 600 travis_deploy
-- mv travis_deploy ~/.ssh/id_rsa
 - ssh-keyscan -H $REMOTEADDRESS >> ~/.ssh/known_hosts
 script:
 - echo "Skipping tests"
-- ssh -oStrictHostKeyChecking=no $REMOTEUSER@$REMOTEADDRESS 'bash -s' < scripts/staging.sh
+- ssh -i travis_deploy $REMOTEUSER@$REMOTEADDRESS 'bash -s' < scripts/staging.sh
 deploy:
 - provider: script
   skip_cleanup: true
