--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,11 @@
-language: node_js
-node_js:
-- node
-before_install:
+language: c
+install: true
+script: true
+before_deploy:
 - openssl aes-256-cbc -K $encrypted_9b00f5262c30_key -iv $encrypted_9b00f5262c30_iv
   -in travis_deploy.enc -out travis_deploy -d
 - chmod 600 travis_deploy
 - ssh-keyscan -H $REMOTEADDRESS >> ~/.ssh/known_hosts
-install: true
-script: true
 deploy:
 - provider: script
   skip_cleanup: true
