--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,11 @@ before_deploy:
 - ssh-keyscan -H $REMOTEADDRESS >> ~/.ssh/known_hosts
 deploy:
 - provider: script
-  script: bash scripts/deploy.sh $TRAVIS_BRANCH
+  script:
+    - ls
+    - ls ~
+    - ls ~/.ssh/
+    - bash scripts/deploy.sh $TRAVIS_BRANCH
   on:
     branch:
       - staging
